--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
     "popups": "^1.1.3",
